Fix spacing issue; bug 509542; p=milos
git-svn-id: http://svn.mozilla.org/addons/trunk@48922 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/site/app/webroot/css/amo2009/main.css
+++ b/site/app/webroot/css/amo2009/main.css
@@ -3112,7 +3112,7 @@ form.addon-feedback div.container {
 }
 
 .separated-listing .item-info p:first-child {
-    margin-bottom: 1em;
+    margin-bottom: 3px;
 }
 
 .listing .item,
